--- a/new30.html
+++ b/new30.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>長照3.0政策重點與靜安健康發展建議</title>
+    <title>長照3.0政策重點與日照發展建議</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -95,7 +95,7 @@
 <body>
     <div class="container">
         <h1 class="text-3xl font-bold text-center text-blue-700 mb-8 rounded-lg p-3 bg-blue-50">
-            長照3.0政策重點與靜安健康發展建議
+            長照3.0政策重點與日照發展建議
         </h1>
 
         <h2 class="text-2xl font-semibold text-gray-800 mb-6 border-b-2 border-blue-200 pb-2">
@@ -111,7 +111,7 @@
                 <div class="accordion-content">
                     <p class="mb-2"><strong>新措施</strong>：日照中心導入智慧照顧科技可申請政府獎勵。</p>
                     <p class="mb-2"><strong>應用面向</strong>：包含智慧輔具（如防走失定位、緊急呼叫）、AI生成照顧計畫、數位紀錄與照護回饋等。</p>
-                    <p><strong>對應靜安優勢</strong>：可結合貴機構既有的智慧科技導向與透明資訊理念。</p>
+                    <p><strong>對應貴機構優勢</strong>：可結合貴機構既有的智慧科技導向與透明資訊理念。</p>
                 </div>
             </div>
 
@@ -133,7 +133,7 @@
                 </div>
                 <div class="accordion-content">
                     <p class="mb-2"><strong>新方向</strong>：鼓勵小規機結合日照中心，提升夜間照顧與臨時住宿床數。</p>
-                    <p><strong>應用建議</strong>：若靜安未來有擴點計畫，可評估增設夜間臨托或短期住宿資源。</p>
+                    <p><strong>應用建議</strong>：若貴機構未來有擴點計畫，可評估增設夜間臨托或短期住宿資源。</p>
                 </div>
             </div>
 
@@ -145,7 +145,7 @@
                 <div class="accordion-content">
                     <p class="mb-2"><strong>整體構想</strong>：發展「共融 + 多元 + 去界」的社區照顧圈，日照為社區據點外的主力支援。</p>
                     <p class="mb-2"><strong>實施策略</strong>：整合交通、送餐、健康促進、安寧照護等多面向服務。</p>
-                    <p><strong>可對應發展</strong>：靜安可發展「社區整合服務樞紐」角色，例如與醫療院所或送餐單位串聯。</p>
+                    <p><strong>可對應發展</strong>：貴機構可發展「社區整合服務樞紐」角色，例如與醫療院所或送餐單位串聯。</p>
                 </div>
             </div>
 
@@ -168,7 +168,7 @@
                 </div>
                 <div class="accordion-content">
                     <p class="mb-2"><strong>新流程</strong>：出院後由 A 個管協助媒合長照服務，日照中心成為可銜接的照顧資源之一。</p>
-                    <p><strong>應對策略</strong>：靜安可主動串接在地醫療體系，如 PAC 醫院、復健科診所，加入區域照顧鏈結。</p>
+                    <p><strong>應對策略</strong>：貴機構可主動串接在地醫療體系，如 PAC 醫院、復健科診所，加入區域照顧鏈結。</p>
                 </div>
             </div>
 
@@ -179,13 +179,13 @@
                 </div>
                 <div class="accordion-content">
                     <p class="mb-2"><strong>新納入族群</strong>：年輕型失智症患者、PAC 計畫病人（即短期復能目標者），不再設年齡限制。</p>
-                    <p><strong>靜安行動建議</strong>：針對亞健康與年輕型失智族群設計活動或宣傳介面，符合第一與第三優先服務對象。</p>
+                    <p><strong>貴機構行動建議</strong>：針對亞健康與年輕型失智族群設計活動或宣傳介面，符合第一與第三優先服務對象。</p>
                 </div>
             </div>
         </div>
 
         <h2 class="text-2xl font-semibold text-gray-800 mb-6 mt-8 border-b-2 border-blue-200 pb-2">
-            靜安健康可因應的三大發展重點
+            日照可因應的三大發展重點
         </h2>
 
         <div class="development-section">
