--- a/chinasmartlocker.html
+++ b/chinasmartlocker.html
@@ -68,12 +68,12 @@
         </div>
         
         <audio controls>
-            <source src="https://drive.google.com/file/d/1uAs7qjYzL7Oyq9MOM6LjZWiAopBkf8bg/preview" type="audio/mp4">
+            <source src="https://drive.google.com/uc?export=download&id=1uAs7qjYzL7Oyq9MOM6LjZWiAopBkf8bg" type="audio/mp4">
             您的瀏覽器不支援 HTML5 音訊播放。
         </audio>
 
         <div class="audio-description">
-            <p>音檔連結：<a href="https://drive.google.com/file/d/1uAs7qjYzL7Oyq9MOM6LjZWiAopBkf8bg/preview" target="_blank">點此下載或在新視窗收聽</a></p>
+            <p>音檔連結：<a href="https://drive.google.com/uc?export=download&id=1uAs7qjYzL7Oyq9MOM6LjZWiAopBkf8bg" target="_blank">點此下載或在新視窗收聽</a></p>
         </div>
     </div>
 
