--- a/chinasmartlocker.html
+++ b/chinasmartlocker.html
@@ -68,7 +68,7 @@
         </div>
         
         <audio controls>
-            <source src="https://drive.google.com/uc?export=download&id=1uAs7qjYzL7Oyq9MOM6LjZWiAopBkf8bg" type="audio/mp4">
+            <source src="https://1drv.ms/v/c/05e2233b8f3849ef/EUvICAM7zL5Dql7BO_HmXtABjZ0QHJe7iHDaajEgbrXl2A?e=LTlfcK" type="audio/mp4">
             您的瀏覽器不支援 HTML5 音訊播放。
         </audio>
 
