--- a/chiitinerary.html
+++ b/chiitinerary.html
@@ -165,7 +165,7 @@
                         <li><strong>07:30:</strong> 🏁 Bank of America Chicago Marathon 正式起跑！</li>
                         <li><strong>完賽後:</strong> 領取完賽包，拍照留念，慢慢步行回飯店。</li>
                         <li><strong>下午:</strong> 沐浴、補充能量，務必讓身體得到充分的靜態休息。</li>
-                        <li><strong>🏆 晚餐建議 (慶功):</strong> 到 Beatrix 享用健康豐盛的一餐，或在 Cafecito 品嚐美味的古巴三明治與熱湯。</li>
+                        <li><strong>🏆 晚餐建議 (慶功):</strong> 5:30 PM @ Pizzeria Due / 每人費用約70美金 </li>
                     </ul>
                 </div>
             </div>
