--- a/chiitinerary.html
+++ b/chiitinerary.html
@@ -118,16 +118,16 @@
                      <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
                         <div class="bg-gray-50 p-4 rounded-lg">
                            <h3 class="font-semibold text-lg mb-2">🎟️ 上午</h3>
-                           <p>前往馬拉松 Expo (McCormick Place) 領取號碼布與選手包。</p>
+                           <p> 1. 前往出發點探勘 (步行: 瑞士飯店出發 1.1KM) 2. 前往馬拉松 Expo (McCormick Place) 領取號碼布與選手包。</p>
                            <p class="text-sm text-slate-500 mt-2">交通: CTA 公車 #3 或 #21，或 Uber。</p>
                         </div>
                         <div class="bg-gray-50 p-4 rounded-lg">
                            <h3 class="font-semibold text-lg mb-2">🏛️ 中午至下午</h3>
-                           <p>在千禧公園 (Millennium Park) 與雲門（銀豆）合影，並參觀芝加哥藝術博物館 (Art Institute of Chicago)。</p>
+                           <p> EXPO: McCormick Place, Lakeside Center, Hall D & 簡單速食餐。</p>
                         </div>
                         <div class="bg-gray-50 p-4 rounded-lg">
                            <h3 class="font-semibold text-lg mb-2">🚢 傍晚</h3>
-                           <p>參加芝加哥建築遊船 (Architecture River Cruise)，欣賞城市天際線。</p>
+                           <p>參加芝加哥建築遊船 (Architecture River Cruise)，欣賞城市天際線。 US$64/人 </p>
                         </div>
                         <div class="bg-gray-50 p-4 rounded-lg col-span-1 md:col-span-2 lg:col-span-3">
                            <h3 class="font-semibold text-lg mb-2">🍕 晚餐建議</h3>
@@ -149,7 +149,7 @@
                         <li><strong>上午:</strong> 自由活動，建議輕鬆散步，避免過度勞累。</li>
                         <li><strong>下午:</strong> 靜態行程建議：參觀芝加哥文化中心（免費）或 Harold Washington Library。購物可至 Block 37。</li>
                         <li><strong>傍晚:</strong> 在飯店充分休息、伸展、泡腳，為明日大賽做準備。</li>
-                        <li><strong>🍝 晚餐建議:</strong> 提早享用碳水化合物為主的晚餐，如 Quartino Ristorante 或 RPM Italian 的義大利麵。</li>
+                        <li><strong>🍝 晚餐建議:</strong> MingHin Cuisine 中餐廳，距離瑞士飯店步行5分鐘 </li>
                     </ul>
                 </div>
             </div>
