--- a/chiitinerary.html
+++ b/chiitinerary.html
@@ -131,7 +131,7 @@
                         </div>
                         <div class="bg-gray-50 p-4 rounded-lg col-span-1 md:col-span-2 lg:col-span-3">
                            <h3 class="font-semibold text-lg mb-2">🍕 晚餐建議</h3>
-                           <p>品嚐芝加哥道地的深盤披薩 (Giordano's 或 Lou Malnati’s)，或探索 Eataly 義大利市集。</p>
+                           <p>Chinatown 或是 品嚐芝加哥道地的深盤披薩 (Giordano's 或 Lou Malnati’s)，或探索 Eataly 義大利市集。</p>
                         </div>
                      </div>
                 </div>
