--- a/interval_pace_calculator.html
+++ b/interval_pace_calculator.html
@@ -57,6 +57,9 @@
                 <p class="text-gray-500 mt-1">分鐘/公里</p>
             </div>
         </div>
+        
+        <p class="text-center text-sm text-gray-400 mt-8">NTU EMBA 用愛跑步</p>
+
     </div>
 
     <script>
