--- a/MBiDE.html
+++ b/MBiDE.html
@@ -182,7 +182,7 @@
                                 <option value="all">所有教師</option>
                                 <option value="陳家麟">陳家麟</option>
                                 <option value="郭瑞祥">郭瑞祥</option>
-                                <option value="陳家麟/郭瑞祥">共同授課</option>
+                            <option value="陳家麟/郭瑞祥">共同授課</option>
                             </select>
                         </div>
                         <div>
@@ -334,14 +334,14 @@
                       '3. 蝦皮購物可否持續獲利？該如何因應下階段的挑戰？'
                   ] },
                 { session: 'Session 8', title: '個案作業 3: 紐約時報付費牆', group: '單號組',
-                  desc: '2011年《紐約時報》網站設立付費牆，成功吸引了39萬數位版訂戶。',
+                  desc: '2011年《紐約時報》網站設立付費牆，成功吸引了39萬數位版訂戶。**注意：本門課程僅要求繳交 2 份個案作業。請依照教師指示確認應繳交的份數。**',
                   questions: [
                       '1. 付費牆是否有效？',
                       '2. 就產品策略與定價策略而言,您如何評估目前的付費牆？',
                       '3. 為了實現這項數位轉型，《紐約時報》需要具備哪些新技能與能力？'
                   ] },
                 { session: 'Session 9', title: '個案作業 4: Mastercard', group: '雙號組',
-                  desc: 'Mastercard 在支付產業格局不斷演變下，是否已為下個十年做好準備？',
+                  desc: 'Mastercard 在支付產業格局不斷演變下，是否已為下個十年做好準備？**注意：本門課程僅要求繳交 2 份個案作業。請依照教師指示確認應繳交的份數。**',
                   questions: [
                       '1. Banga在2010年接任執行長時，接手的是一間什麼樣的公司？',
                       '2. 他在任期內如何轉型這家公司？哪些方面讓你印象最深刻？為什麼？',
@@ -456,7 +456,7 @@
                         ${getTypeTag(session.type)}
                     </div>
                 `;
-                card.addEventListener('click', ()_ => showSessionDetail(session.id));
+                card.addEventListener('click', () => showSessionDetail(session.id));
                 sessionGrid.appendChild(card);
             });
 
