--- a/MBiDE.html
+++ b/MBiDE.html
@@ -96,7 +96,7 @@
         
         <header class="mb-6">
             <h1 class="text-3xl md:text-4xl font-bold" style="color: var(--color-primary);">數位時代的經營策略</h1>
-            <p class="text-lg" style="color: var(--text-muted);">EMBA 互動課程大綱 (MBDE 8.0)</p>
+            <p class="text-lg" style="color: var(--text-muted);">EMBA 互動課程大綱</p>
         </header>
 
         <nav class="flex border-b border-gray-300 mb-6">
