--- a/PoO.html
+++ b/PoO.html
@@ -181,70 +181,70 @@
                 title: "Overture（序曲）",
                 singer: "管風琴與樂隊",
                 meaning: "用管風琴強烈開場，象徵魅影的存在與故事的神秘氛圍。",
-                emotion: "震撼、壓迫、充滿戲劇性。"
+                emotion: "震撼、壓迫、充滿戲劇性。",
                 url: "https://music.youtube.com/watch?v=AHup_sIZm1Q&si=b82PJf7VHIfX1Fu9"
             },
             {
                 title: "Think of Me",
                 singer: "克莉絲汀",
                 meaning: "克莉絲汀首次在舞台上演出，展現歌唱才華，同時對勞爾的一種溫柔呼喚。",
-                emotion: "純真、希望、夢想的實現。"
+                emotion: "純真、希望、夢想的實現。",
                 url: "https://music.youtube.com/watch?v=lar09j82moc&si=Yp-mCYHRuslp9vdJ"
             },
             {
                 title: "The Phantom of the Opera",
                 singer: "魅影與克莉絲汀",
                 meaning: "魅影帶領克莉絲汀深入歌劇院地下世界，展現控制與誘惑。",
-                emotion: "迷幻、誘惑、神秘；帶有危險感。"
+                emotion: "迷幻、誘惑、神秘；帶有危險感。",
                 url: "https://music.youtube.com/watch?v=SNdW-WV2LCM&si=bt7dwQCA53iTKum-"
             },
             {
                 title: "The Music of the Night",
                 singer: "魅影",
                 meaning: "魅影試圖用音樂感動克莉絲汀，展現他的藝術與情慾，是魅影最情感豐沛的告白。",
-                emotion: "柔情、迷戀、壓抑的渴望與深層孤寂。"
+                emotion: "柔情、迷戀、壓抑的渴望與深層孤寂。",
                 url: "https://music.youtube.com/watch?v=4JXFOnWYMAg&si=69wkCgbfw0GQ4rzo"
             },
             {
                 title: "All I Ask of You",
                 singer: "克莉絲汀與勞爾",
                 meaning: "兩人確立彼此的愛情，克莉絲汀尋求安全與真愛。",
-                emotion: "純粹、溫柔、安全感，全劇中最浪漫的一首。"
+                emotion: "純粹、溫柔、安全感，全劇中最浪漫的一首。",
                 url: "https://music.youtube.com/watch?v=vvIdVlnr4tE&si=51g6WwB81hlooCS2"
             },
             {
                 title: "All I Ask of You (Reprise)",
                 singer: "魅影",
                 meaning: "魅影暗中目睹兩人告白，感到被背叛，報復的種子萌芽。",
-                emotion: "心碎、悲傷、醋意。"
+                emotion: "心碎、悲傷、醋意。",
                 url: "https://music.youtube.com/watch?v=nzVjzqoKsY8&si=fP1ttaFgdv1xa1C-"
             },
             {
                 title: "Masquerade（化妝舞會）",
                 singer: "群體合唱",
                 meaning: "歌劇團在新年舉辦舞會，象徵表面繁華掩蓋的真相。",
-                emotion: "歡樂外表下暗藏不安，情緒轉折重要時刻。"
+                emotion: "歡樂外表下暗藏不安，情緒轉折重要時刻。",
                 url: "https://music.youtube.com/watch?v=CVO2LcP4siQ&si=39Xsq_uvcHRF9C4v-"
             },
             {
                 title: "Wishing You Were Somehow Here Again",
                 singer: "克莉絲汀",
                 meaning: "克莉絲汀在父親墓前唱歌，思念並試圖釋懷，代表她內在心靈的獨白。",
-                emotion: "哀傷、掙扎、成長。"
+                emotion: "哀傷、掙扎、成長。",
                 url: "https://music.youtube.com/watch?v=91lX_Z5wtME&si=6Fjt9pU-yTU56xSp"
             },
             {
                 title: "The Point of No Return",
                 singer: "魅影與克莉絲汀",
                 meaning: "魅影在劇中劇中潛入舞台與克莉絲汀對唱，測試她的情感極限，象徵情感上的「不能回頭」。",
-                emotion: "挑逗、試探、危險、情慾高張。"
+                emotion: "挑逗、試探、危險、情慾高張。",
                 url: "https://music.youtube.com/watch?v=ox2t5trEGuY&si=83lOnpSENWXlkoQL"
             },
             {
                 title: "Finale（結尾）",
                 singer: "克莉絲汀、魅影",
                 meaning: "克莉絲汀親吻魅影，給予他從未獲得的同情與愛。魅影最終選擇放手與消失。",
-                emotion: "淚水、救贖、釋放與孤獨。"
+                emotion: "淚水、救贖、釋放與孤獨。",
                 url: "https://music.youtube.com/watch?v=ox2t5trEGuY&si=83lOnpSENWXlkoQL"
             }
         ];
